# voice_rag

./: .dockerignore  .env.example  .gitignore  .railwayignore  DEPLOY.md  README.md  app.py  ingest.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
backend/: main.py
data/: Here is a step by step.txt
frontend/: package.json  railway.toml
frontend/src/: AdminPanel.css  AdminPanel.jsx  App.css  App.jsx  VoiceAssistant.css  VoiceAssistant.jsx  api.js  index.css  useSpeechRecognition.js
